# libpressio-rs

./: .gitmodules  COPYRIGHT.txt  Cargo.toml  README.md  build.rs  crates.js  help.html  index.html  settings.html  src-files.js
.github/workflows/: ci.yml  rustdoc.yml
libdistributed-sys/: Cargo.toml  README.md  build.rs
libdistributed-sys/src/: lib.rs
libpressio/: all.html  enum.PressioArray.html  enum.PressioConversionSafety.html  enum.PressioDtype.html  enum.PressioOption.html  enum.PressioThreadSafety.html  fn.features.html  fn.major_version.html  fn.minor_version.html  fn.patch_version.html  fn.supported_compressors.html  fn.supported_io_modules.html  fn.supported_metrics.html  index.html  sidebar-items.js  struct.Pressio.html  struct.PressioCompressor.html  struct.PressioData.html  struct.PressioError.html  struct.PressioOptions.html  struct.PressioSendableCompressor.html  trait.PressioElement.html
libpressio-opt-sys/: Cargo.toml  README.md  build.rs  wrapper.h
libpressio-opt-sys/src/: lib.rs
libpressio-sys/: COPYRIGHT.txt  Cargo.toml  README.md  build.rs  wrapper.h
libpressio-sys/src/: lib.rs
libpressio_sys/: all.html  constant.pressio_conversion_safety_pressio_conversion_explicit.html  constant.pressio_conversion_safety_pressio_conversion_implicit.html  constant.pressio_conversion_safety_pressio_conversion_special.html  constant.pressio_dtype_pressio_bool_dtype.html  constant.pressio_dtype_pressio_byte_dtype.html  constant.pressio_dtype_pressio_double_dtype.html  constant.pressio_dtype_pressio_float_dtype.html  constant.pressio_dtype_pressio_int16_dtype.html  constant.pressio_dtype_pressio_int32_dtype.html  constant.pressio_dtype_pressio_int64_dtype.html  constant.pressio_dtype_pressio_int8_dtype.html  constant.pressio_dtype_pressio_uint16_dtype.html  constant.pressio_dtype_pressio_uint32_dtype.html  constant.pressio_dtype_pressio_uint64_dtype.html  constant.pressio_dtype_pressio_uint8_dtype.html  constant.pressio_option_type_pressio_option_bool_type.html  constant.pressio_option_type_pressio_option_charptr_array_type.html  constant.pressio_option_type_pressio_option_charptr_type.html  constant.pressio_option_type_pressio_option_data_type.html  constant.pressio_option_type_pressio_option_double_type.html  constant.pressio_option_type_pressio_option_dtype_type.html  constant.pressio_option_type_pressio_option_float_type.html  constant.pressio_option_type_pressio_option_int16_type.html  constant.pressio_option_type_pressio_option_int32_type.html  constant.pressio_option_type_pressio_option_int64_type.html  constant.pressio_option_type_pressio_option_int8_type.html  constant.pressio_option_type_pressio_option_threadsafety_type.html  constant.pressio_option_type_pressio_option_uint16_type.html  constant.pressio_option_type_pressio_option_uint32_type.html  constant.pressio_option_type_pressio_option_uint64_type.html  constant.pressio_option_type_pressio_option_uint8_type.html  constant.pressio_option_type_pressio_option_unset_type.html  constant.pressio_option_type_pressio_option_userptr_type.html  constant.pressio_options_key_status_pressio_options_key_does_not_exist.html  constant.pressio_options_key_status_pressio_options_key_exists.html  constant.pressio_options_key_status_pressio_options_key_set.html  constant.pressio_thread_safety_pressio_thread_safety_multiple.html  constant.pressio_thread_safety_pressio_thread_safety_serialized.html  constant.pressio_thread_safety_pressio_thread_safety_single.html  (+270 more)
lua-sys/: Cargo.toml  build.rs
mpi-stubs-sys/: Cargo.toml  build.rs
search.index/: 00ae034e3e.js  00de2f6707.js  00fbab2e9e.js  0252dab9f5.js  031aaa51ec.js  03cd57413e.js  04da528f4a.js  0756c3ca3b.js  09db3b6c35.js  0a12c48094.js  0b06995283.js  0be5de962e.js  0c85eed5f8.js  0e8390009e.js  0f06c3068a.js  0f3e472d68.js  0f7fb8bf22.js  0fb48d2ae5.js  10b49ac0ff.js  124d1f64cf.js  129172de2c.js  134c2a07ed.js  1496bf9453.js  150a97998a.js  17344abfea.js  17398bfacd.js  1802fa9f56.js  184a5fe843.js  18a810d7a5.js  18fbc036b8.js  1991d88676.js  1b9fcd6f08.js  1bdad429df.js  1c649c6a69.js  1c7f819123.js  1ca19b792c.js  1edebb8af3.js  1fa1efdfe9.js  214d6d403c.js  23b490ac5c.js  (+103 more)
search.index/crateNames/: 02d291c497.js
search.index/desc/: 1942ef7b72.js  21fd9938ef.js
search.index/entry/: 2714dc51e6.js  3b5a30870b.js
search.index/function/: ccc1aaa5b8.js  fb73820ab8.js
search.index/generic_inverted_index/: 55eb41b356.js  9565c16847.js
search.index/name/: 473017ce2e.js  698185c9b4.js
search.index/normalizedName/: 0082379117.js  6a3bb81c6b.js
search.index/path/: 08f3fa42f1.js  fabd506e75.js
search.index/type/: 299982e4e7.js  ce567be06b.js
src/: lib.rs
src/libpressio/: lib.rs.html
src/libpressio_sys/: lib.rs.html
src/std_compat_sys/: lib.rs.html
std-compat-sys/: COPYRIGHT.txt  Cargo.toml  README.md  build.rs
std_compat_sys/: all.html  index.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
trait.impl/core/ops/drop/: trait.Drop.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/libpressio/: trait.PressioElement.js
type.impl/core/option/: enum.Option.js
type.impl/std/os/raw/: type.c_uint.js
