[workspace]
resolver = "2"
members = ["libpressio-sys"]

[workspace.package]
edition = "2024"
authors = ["Robert Underwood <rr.underwood94@gmail.com>"]
repository = "https://github.com/robertu94/libpressio-rs"
rust-version = "1.85"

[workspace.dependencies]
# workspace-internal crates
libpressio = { version = "0.1", path = ".", default-features = false }
libpressio-sys = { version = "0.1", path = "libpressio-sys", default-features = false }

# crates.io third-party dependencies
bindgen = { version = "0.71", default-features = false }
cc = { version = "1.2", default-features = false }
cmake = { version = "0.1.26", default-features = false }
libc = { version = "0.2", default-features = false }
ndarray = { version = "0.16.1", default-features = false }

[package]
name = "libpressio"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

description = "High-level Rust bindings to the libpressio compression framework"
categories = ["api-bindings", "compression", "encoding"]
keywords = ["libpressio", "compression", "encoding"]

[dependencies]
ndarray = { workspace = true }
libc = { workspace = true }
libpressio-sys = { workspace = true }
