[workspace]
resolver = "2"
members = ["libpressio-sys", "std-compat-sys"]

[workspace.package]
edition = "2024"
authors = ["Robert Underwood <rr.underwood94@gmail.com>", "Juniper Tyree <juniper.tyree@helsinki.fi>"]
repository = "https://github.com/robertu94/libpressio-rs"
rust-version = "1.85"  # keep in sync with bindgen MSRV

[workspace.dependencies]
# workspace-internal crates
libpressio = { version = "0.1", path = ".", default-features = false }
libpressio-sys = { version = "0.1", path = "libpressio-sys", default-features = false }
std-compat-sys = { version = "0.1", path = "std-compat-sys", default-features = false }

# crates.io third-party dependencies
anyhow = { version = "1.0.93", default-features = false }
bindgen = { version = "0.71", default-features = false }
bzip2-sys = { version = "0.1.12", default-features = false }
cmake = { version = "0.1.26", default-features = false }
libc = { version = "0.2.39", default-features = false }
lua-sys = { version = "540.0", git = "https://github.com/juntyr/sol2-rs.git", rev = "491e6eb", default-features = false }
ndarray = { version = "0.16.1", default-features = false }
openmp-sys = { version = "1.3.0", default-features = false }
regex = { version = "1.11.1", default-features = false }
sol2-sys = { version = "0.1", git = "https://github.com/juntyr/sol2-rs.git", rev = "491e6eb", default-features = false }
thiserror = { version = "2.0.17", default-features = false }

[package]
name = "libpressio"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

description = "High-level Rust bindings to the libpressio compression framework"
categories = ["api-bindings", "compression", "encoding"]
keywords = ["libpressio", "compression", "encoding"]

[features]
bzip2 = ["libpressio-sys/bzip2"]
lua = ["libpressio-sys/lua"]
openmp = ["libpressio-sys/openmp"]

[dependencies]
ndarray = { workspace = true }
libc = { workspace = true }
libpressio-sys = { workspace = true }
thiserror = { workspace = true }
